fea-rs/test-data/compile-tests/mini-latin/bad/variable_unknown_condset_tag.fea
conditionset groovy {
	grvy 101 404;
} groovy;
